# FFmpegDemo

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/alick/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/alick/ffmpegdemo/: FFmpegPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/alick/ffmpegdemo/: ExampleUnitTest.java
ffmpeglibrary/: CMakeLists.txt  build.gradle
ffmpeglibrary/src/androidTest/java/com/alick/ffmpeglibrary/: ExampleInstrumentedTest.java
ffmpeglibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/src/main/java/com/alick/ffmpeglibrary/: BLog.java  DensityUtil.java  FFmpegPlayer.java  FileUtils.java  T.java  ToastCompat.java
ffmpeglibrary/src/main/jni/ffmpeg/: c.c  file_test.c  imooc_test.c  lib_utils.c  lib_utils.h  native-lib.c  player.c  test.txt
ffmpeglibrary/src/main/jni/ffmpeg/include/libavcodec/: avcodec.h
ffmpeglibrary/src/main/jni/ffmpeg/include/libavutil/: avutil.h  crc.h  pixdesc.h
ffmpeglibrary/src/main/res/layout/: layout_toast.xml
ffmpeglibrary/src/main/res/values/: color.xml
ffmpeglibrary/src/test/java/com/alick/ffmpeglibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
